--- a/src/components/card.css
+++ b/src/components/card.css
@@ -22,6 +22,9 @@ hr {
 .title {
     margin-bottom: 10px;
 }
+.title:hover{
+    color: var(--Cyan);
+}
 
 .card {
 
@@ -34,7 +37,7 @@ hr {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 20px;
-    box-shadow: 6px 10px 4px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 12px 13px 20px 14px rgb(0 0 0 / 20%);
 }
 
 .container {
